--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -1,4 +1,4 @@
-s \section{Experimenteller Teil}
+\section{Experimenteller Teil}
 Im ersten Teil der Auswertung verfolgen wir im Wesentlichen Ionen durch die Anlage.
 Untersucht werden soll dabei eine vorbereitete BeO-Probe, genannt \glqq 153BeO\grqq{}, und die Proben \glqq 13KY\grqq{}, \glqq 14KY\grqq{}, \glqq 16KY\grqq{} und \glqq 17KY\grqq{}.
 Im zweiten Teil betrachten wir aufgenommene Spektren und untersuchen eine unbekannte Probe.
@@ -19,9 +19,11 @@ Ionen mit einer anderen Masse oder anderem Ladungszustand haben im Magneten eine
 (Tatsächlich lässt sich wie in Gleichung \ref{Auswertung_eq_Magnet} zu sehen nur nach $\frac{\sqrt{m_{\text{ion}}}}{q_{\text{ion}}}$ selektieren.
 Ionen mit vierfacher Masse und doppelter Ladung würden also auch weiterkommen. Derart schwere Teilchen sind jedoch fast gar nicht in der Probe vorhanden.)
 An dieser Stelle lässt sich jedoch nicht unterscheiden zwischen Molekularen isobaren, so zum Beispiel zwischen $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{9}\text{Be}^{17}\text{O}^{-}$ (wobei $^{17}\text{O}$ in der Natur sehr selten vorkommt) oder $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{10}\text{B}^{16}\text{O}^{-}$ ($^{10}\text{B}$ entsteht beim Beta-Zerfall von $^{10}\text{Be}$).
+Ebenfalls wichtig ist, dass hier keine leichten Moleküle oder Ionen mit einem anderen Ladungszustand als 1 vorkommen, theoretisch vorhandene schwere Moleküle könnten jedoch hier mit höheren Ladungszuständen auftauchen.
 Für $\rho$ war ein Wert von \SI{0.4}{\metre} gegeben.
 Damit ergeben sich für einfach negativ geladene Ionen folgende benötigte Magnetfeldstärken:
 \begin{center}
+  \captionof{table}{Benötigte Magnetfeldstärken im ersten Ablenkmagneten für Ionen vor dem Beschleuniger}
   \begin{tabular}{|c|c|}
     \hline
     Ion & Magnetfeldstärke / \si{\tesla} \\
@@ -31,7 +33,6 @@ Damit ergeben sich für einfach negativ geladene Ionen folgende benötigte Magne
     $^{10}\text{Be}^{16}\text{O}^{-}$ & \num{-0.313} \\
     \hline
   \end{tabular}
-  \captionof{table}{Benötigte Magnetfeldstärken im ersten Ablenkmagneten für Ionen vor dem Beschleuniger}
   \label{Auswertung_tab_Ionenenergien_vor_Besch}
 \end{center}
 Um diese Magnetfelder anzulegen ist im besten Fall eine Kalibrierung des Magneten vorhanden, die jedoch in diesem Versuch nicht durchgeführt wurde.
@@ -52,8 +53,9 @@ Leider haben wir dies in dem Versuch nicht gemacht.
 
 In Abb. \ref{lowenergy} sind jetzt die Messungen dargestellt.
 Zur Identifikation betrachten wir als erstes die 153BeO Probe.
-Die berechneten Massen sind in Tabelle \ref{153Be} zu sehen.
-Die Höhe der Peaks wird für die folgende Analyse nicht betrachtet, da der ADC des Faraday-Cup gerade an den Maxima häufig übersteuert hat und wir damit keinen zuverlässigen Messwert haben.
+Die aufgenommenen Intensitäten sind in Abb. \ref{Probe_Be} zu sehen.
+Die berechneten Massen in Tabelle \ref{153Be}.
+Die Höhe der Peaks wird für die folgende Analyse nicht betrachtet, da das Amperemeter des Faraday-Cup gerade an den Maxima häufig übersteuert hat und wir damit keinen zuverlässigen Messwert haben.
 \begin{table}[h]
     \centering
     \caption{Berechnung der Massen im Niedrigenergiebereich für Probe 153Be.}
@@ -72,75 +74,67 @@ Die entsprechenden Massen sind hier eindeutig zuordbar, was bei einer reinen Pro
 \begin{itemize}
     \item \SI{16}{\atomicmassunit} entsprechen der Masse von $^{16}$O$^{1-}$.
     \item \SI{25}{\atomicmassunit} entsprechen der Masse von $^{9}$Be$^{16}$O$^{1-}$.
-    \item \SI{28}{\atomicmassunit} entsprechen der Masse von $^{10}$Be$^{18}$O$^{1-}$.
+    \item \SI{28}{\atomicmassunit} entspricht mit ziemlicher Sicherheit $^{12}$C$^{16}$O$^{1-}$.
+Diese sind auch einfach durch Verschmutzungen der Probe mit Luft zu erklären.
+Theoretisch könnte hier auch $^{10}$Be$^{18}$O$^{1-}$ gemessen werden, beide Isotope sind jedoch bereits für sich alleine selten, ein Strom von diesen Molekülen ist dementsprechend unwahrscheinlich.
+Außerdem wäre in diesen Fall ein zusätzllicher Peak bei \SI{18}{\atomicmassunit} für $^{18}$O$^{-1}$ zu erwarten.
 \end{itemize}
-Hier ist auffällig, dass zwar sowohl $^{16}$O$^{1-}$ als auch $^{10}$Be$^{18}$O$^{1-}$ nachweisbar sind, einzelne $^{18}$O$^{1-}$ Ionen oder  weitere Kombinationen der verschiedenen Isotope jedoch nicht gefunden wurden.
 
-Die Probe KY13 besitzt weitgehend dieselben Peaks.
-Neu hinzugekommen ist bei dieser einer bei \SI{42.29}{\ampere}, was einer Masse von \SI{12}{\atomicmassunit} entspricht.
-Eine Erklärung dieser Masse wären $^{12}$C$^{1-}$ Ionen, welche aus der Probe oder auch durch Lufteinschlüsse in der Probe zu finden sind.
-Ebenfalls möglich, jedoch wäre hier die Abweichung etwas hoch, wären $^{10}$Be$^{16}$O$^{2-}$ Teilchen.
+\begin{figure}[ht]
+	\centering
+           \includegraphics[width=0.85\textwidth]{../Pictures/Be_low.png}
+	\caption{Gemessene Stromstärken der Strahlen (im Faraday-Cup) in Abhängigkeit der eingestellten Stromstärke am BI \ang{90} Bouncer-Magneten für die BeO-Probe}
+	\label{Probe_Be}
+\end{figure}
 
-In Tabelle \ref{KY_rest} sind die weiteren Peaks und die dazu passenden Ionen dargestellt.
-Auf bereits bestimmte Peaks werden wir hier nicht weiter eingehen, wir identifizieren nur neu erscheinende.
 
+In Tabelle \ref{KY_rest} sind die Peaks der Probe KY13 und die dazu passenden Ionen dargestellt.
+Bei den gemessenen Strömen ist zu beachten, dass wir aufgrund der Vollausschläge bei einigen Strömen keinen Messwert am Peak hatten.
+Ein Vergleich der Intensitäten hier ist daher nicht unbedingt aussagekräftig, die entsprechenden Intensitäten sind zur Vollständigkeit jeodch in Abb. \ref{lowenergy} dargestellt..
 \begin{table}[h]
     \centering
     \caption{Identifizierung der Ionen am Magneten. Bei Teilchen die mit ? markiert wurden sind wir uns unsicher. Es sind nicht alle möglichen Ionen aufgelistet, manchmal sind eine Vielzahl an Kombinationen möglich.}
-    \begin{tabular}{|c|c|c|c|}
+    \begin{tabular}{|c|c|c|c|c|}
         \hline
-        Probe & I / \si{\ampere} & m / \si{\atomicmassunit} & Teilchen \\
+        Probe & I$_{\text{Magnet}}$ / \si{\ampere} & I$_{\text{gemessen}}$ / \si{\ampere} & m / \si{\atomicmassunit} & Teilchen \\
         \hline
-        \multirow{9}*{KY14} & \num{44.15} & \num{13.1}  & $^{13}$C$^{1-}$ \\
-                            & \num{50.6}  & \num{17.2}  & $^{17}$O$^{1-}$ \\
-                            & \num{52.07} & \num{18.2}  & $^{18}$O$^{1-}$ \\
- 	                        & \num{60.11} & \num{24.2}  & $^{12}$C$_{2}^{1-}$ ? \\
- 	                        & \num{62.57} & \num{26.2}  & $^{10}$Be$^{16}$O$^{1-}$, $^{26}$Al$^{1-}$, $^{9}$BeH$^{16}$O$^{1-}$\\
- 	                        & \num{66.13} & \num{29.3}  & $^{17}$O$^{12}$C$^{1-}$, $^{16}$O$^{13}$C$^{1-}$ \\
- 	                        & \num{67.25} & \num{30.3}  & $^{9}$Be$_{2}$$^{12}$C$^{1-}$ ? \\
- 	                        & \num{69.51} & \num{32.4}  & $^{16}$O$_{2}^{1-}$ \\
- 	                        & \num{73.79} & \num{36.5}  & $^{18}$O$_{2}^{1-}$ ? \\
- 	                        & \num{78.78} & \num{41.6}  & $^{26}$Al$^{16}$O$^{1-}$ \\
- 	                        & \num{80.59} & \num{43.56} & $^{27}$Al$^{16}$O$^{1-}$ \\
-        \hline
+        \multirow{KY13} &  \num{42.205} &  \num{-1.216} $\cdot$ $10^{-7}$ & \num{11.9}  & $^{12}$C$^{1-}$ \\
+ 		       &  \num{44.009} &  \num{-4.579} $\cdot$ $10^{-8}$ & \num{13.0}  & $^{13}$C$^{1-}$ \\
+		       & \num{48.82}   &   $10^{-4}$ & \num{16.0} &  $^{16}$O$^{1-}$ \\
+		       & \num{50.423} & \num{-6.664} $\cdot$ $10^{-8}$ & \num{17.1}  & $^{17}$O$^{1-}$ \\
+		       & \num{51.927} & \num{-8.388} $\cdot$ $10^{-8}$ & \num{18.1}  & $^{10}$O$^{1-}$ \\
+		       & \num{59.944} & \num{-2.926} $\cdot$ $10^{-7}$ & \num{24.1}  & $^{12}$C$_{2}^{1-}$ ?  \\
+		       & \num{61.147} &  \num{-6.527} $\cdot$ $10^{-6}$ & \num{25.1}   & $^{9}$Be$^{16}$O$^{1-}$ \\
+		       & \num{62.55} &  \num{-8.547} $\cdot$ $10^{-9}$ & \num{26.2}   & $^{10}$Be$^{16}$O$^{1-}$, $^{26}$Al$^{1-}$, $^{9}$BeH$^{16}$O$^{1-}$ \\
+		       & \num{64.755} &  \num{-1.680} $\cdot$ $10^{-7}$ & \num{28.1}  & $^{12}$C$^{16}$O$^{1-}$ \\
+		       & \num{65.958} &  \num{-5.040} $\cdot$ $10^{-9}$ & \num{29.1}   & $^{17}$O$^{12}$C$^{1-}$, $^{16}$O$^{13}$C$^{1-}$ \\
+		       & \num{69.265} &  \num{-2.344} $\cdot$ $10^{-7}$& \num{32.2}  & $^{16}$O$_{2}^{1-}$  \\
+		       & \num{73.675} &  \num{-3.302} $\cdot$ $10^{-8}$& \num{36.4}  &  $^{18}$O$_{2}^{1-}$ ?  \\
+		       & \num{78.486} &  \num{-5.783} $\cdot$ $10^{-7}$ & \num{41.3}   &$^{26}$Al$^{16}$O$^{1-}$ \\
+		       & \num{80.59} &  $10^{-8}$ & \num{43.6}   & $^{27}$Al$^{16}$O$^{1-}$ \\
+    \hline
     \end{tabular}
     \label{KY_rest}
 \end{table}
-Die anderen Proben wiesen keine weiteren neuen Peaks auf und sind im wesentlichen zu KY14 identisch.
-AlO ist ein Stoff der häufig in Quarz, aus dem die Proben besteht, vorkommt und nur schwer von BeO zu trennen ist.
+Die anderen Proben wiesen keine weiteren neuen Peaks auf und sind im wesentlichen zu KY13 identisch.
+AlO ist ein Stoff der häufig in Quarz, aus dem die Proben bestehen, vorkommt und nur schwer von BeO zu trennen ist.
 Nicht perfekt zuordbare Peaks lassen sich wahrscheinlich auf Verschmutzungen oder Spurenelemente in der Probe zurückführen.
 Eine Analyse dieser könnte möglicherweise auch auf der Peakhöhe aufbauen, um z. B. zufällige Verschmutzungen durch entsprechend geringe Intensität als solche zu erkennen.
 Dafür müsste man jedoch sicherstellen, dass der ADC des Faraday-Cups nicht übersteuert wird.
 
 \begin{figure}[h]
-\begin{subfigure}{.45\textwidth}
+\begin{subfigure}{\textwidth}
 \centering
-\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos173KY13STUDPract.pdf}
-\caption{Probe KY13}
+\includegraphics[width=.95\linewidth]{../Pictures/LE_samples_current.png}
+\caption{Gemessene Intensitäten für die KY Proben in abhängigkeit der Stromstärke am Magneten.}
 \end{subfigure} \quad
-\begin{subfigure}{.45\textwidth}
-\centering
-\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos174KY14TUDPract.pdf}
-\caption{Probe KY14}
-\end{subfigure}
 \vskip\baselineskip
-\begin{subfigure}{.45\textwidth}
+\begin{subfigure}{\textwidth}
 \centering
-\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos175KY16TUDPract.pdf}
-\caption{Probe KY16}
-\end{subfigure} \quad
-\begin{subfigure}{.45\textwidth}
-\centering
-\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos176KY17TUDPract.pdf}
-\caption{Probe KY17}
-\end{subfigure}
-\vskip\baselineskip
-\begin{subfigure}{.45\textwidth}
-\centering
-\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos153BeOTUDPract.pdf}
+\includegraphics[width=.95\linewidth]{../Pictures/LE_samples_mass.png}
 \caption{Probe 153BeO}
 \end{subfigure}
-\caption{Gemessene Stromstärken der Strahlen (im Faraday-Cup) in Abhängigkeit der eingestellten Stromstärke am BI \ang{90} Bouncer-Magneten für verschiedene Proben.}
+\caption{Gemessene Intensitäten für die KY Proben in abhängigkeit der zugeordneten Masse.}
 \label{lowenergy}
 \end{figure}
 
@@ -159,25 +153,29 @@ Damit ergeben sich für entstandene Ionen eine Energie nach dem Beschleuniger vo
     \hline
     Ion & Energie / \si{\mega\electronvolt} \\
     \hline
-    $^{9}\text{Be}^{1+}$ & \num{7.1} \\
-    $^{9}\text{Be}^{2+}$ & \num{12.3} \\
-    $^{9}\text{Be}^{3+}$ & \num{17.6} \\
-    $^{9}\text{Be}^{4+}$ & \num{22.8} \\
+    $^{9}\text{Be}^{1+}$ & \num{7.15} \\
+    $^{9}\text{Be}^{2+}$ & \num{12.40} \\
+    $^{9}\text{Be}^{3+}$ & \num{17.64} \\
+    $^{9}\text{Be}^{4+}$ & \num{22.89} \\
     \hline
-    $^{10}\text{Be}^{1+}$ & \num{7.3} \\
-    $^{10}\text{Be}^{2+}$ & \num{12.5} \\
-    $^{10}\text{Be}^{3+}$ & \num{17.8} \\
-    $^{10}\text{Be}^{4+}$ & \num{23.0} \\
+    $^{10}\text{Be}^{1+}$ & \num{7.28} \\
+    $^{10}\text{Be}^{2+}$ & \num{12.53} \\
+    $^{10}\text{Be}^{3+}$ & \num{17.77} \\
+    $^{10}\text{Be}^{4+}$ & \num{23.02} \\
     \hline
-    $^{16}\text{O}^{1+}$ & \num{8.5} \\
-    $^{16}\text{O}^{2+}$ & \num{13.7} \\
-    $^{16}\text{O}^{3+}$ & \num{19.0} \\
-    $^{16}\text{O}^{4+}$ & \num{24.2} \\
+    $^{16}\text{O}^{1+}$ & \num{8.50} \\
+    $^{16}\text{O}^{2+}$ & \num{13.74} \\
+    $^{16}\text{O}^{3+}$ & \num{18.99} \\
+    $^{16}\text{O}^{4+}$ & \num{24.24} \\
     \hline
   \end{tabular}
-  \captionof{table}{Ionenenergien nach dem Beschleuniger für ausgewählte Ionen}
+  \captionof{table}{Ionenenergien nach dem Beschleuniger für ausgewählte Ionen. Es wurde angenommen, dass die $^{16}$O Ionen aus $^{10}$Be$^{16}$O stammen.}
   \label{Auswertung_tab_Ionenenergien_nach_Besch}
 \end{center}
+
+Zu beachten ist hier, dass $^9$Be aus $^{9}$Be$^{16}$O stammt und $^{10}$Be aus $^{10}$Be$^{16}$O.
+$^{16}$O kann daher prinzipiell von beiden Molekülen stammen.
+Sauerstoffionen die von $^{9}$Be$^{16}$O stammen haben dabei eine um ca. $110$ keV höhere Energie, sind, sollten aber auch nur einen entsprechend geringen Anteil ausmachen.
 
 \subsection{Faraday-Cups}
 Nachdem wir nun Ionen mit hoher Geschwindigkeit nach dem Beschleuniger haben können wir versuchen, häufig auftretende Nuklide nachzuweisen.
